# fysearch

./: .gitignore  LICENSE  README.md  fysearch.config.json  pyproject.toml
src/fysearch/: cli.py  config.py  db.py  embeddings.py  extract.py  ingest.py  paths.py  vector_index.py  webapp.py
src/fysearch/templates/: index.html
